--- a/src/app/components/start-new-project/start-new-project.component.html
+++ b/src/app/components/start-new-project/start-new-project.component.html
@@ -1,17 +1,21 @@
-<fieldset>
+<fieldset fxLayout="column">
 	<legend>import a new project</legend>
-	<label>Please specify a name for your project:</label><br />
-	<input type="text"  [formControl]="nameForm" /> <input [disabled]="!isValidProjectName() || pathUsed.length == 0" (click)="finalizeProjectImport()" type="button" value="name amd import" /><br />
+	<div fxLayout="row">
+		<label>Please specify a name for your project:</label><br />
+		<input type="text"  [formControl]="nameForm" /> <input [disabled]="!isValidProjectName() || pathUsed.length == 0" (click)="finalizeProjectImport()" type="button" value="name amd import" /><br />
+	</div>
 	 <div *ngIf="nameForm.errors?.required">
 	    Name is required.
-	  </div>
-	  <span>Path selected: {{pathUsed}}</span> 
-	  <button type="button" #projectImportButton (click)="selectProjectDirectory()" >select your project directory</button><br />
-	  <div *ngIf="project">
-	Your project consists of the following files:<br />
-	<ul>
+	 </div>
+	 <div fxLayout="row">
+		 <span>Path selected: {{pathUsed}}</span><span *ngIf="!pathUsed"> currently none</span> 
+		 <button type="button" #projectImportButton (click)="selectProjectDirectory()" >select your project directory</button><br />
+	 </div>
+	 <div *ngIf="project">
+	 Your project consists of the following files:<br />
+	 <ul>
 		<li *ngFor="let file of project.files">{{file.path}}</li>
-	</ul>
-	<p>Containing {{project.numberOfTranslationKeys()}} translations.</p>
-	  </div>
+	 </ul>
+	 <p>Containing {{project.numberOfTranslationKeys()}} translations.</p>
+	 </div>
 </fieldset>
