--- a/src/app/components/welcome-user/welcome-user.component.html
+++ b/src/app/components/welcome-user/welcome-user.component.html
@@ -1,5 +1,5 @@
 <p>
-Hello {{currentUser.name}} [{{currentUser.email}}]. (<a >not you?</a>)
+Hello {{currentUser.name}} [{{currentUser.email}}]. (<a [routerLink]="['../ChangeUser']" >not you?</a>)
 </p>
 <p>
 open a known project: 
