--- a/src/app/components/start-new-project/start-new-project.component.html
+++ b/src/app/components/start-new-project/start-new-project.component.html
@@ -2,13 +2,13 @@
 	<legend>import a new project</legend>
 	<div fxLayout="row">
 		<label>Please specify a name for your project:</label><br />
-		<input type="text"  [formControl]="nameForm" /> <input [disabled]="!isValidProjectName() || pathUsed.length == 0" (click)="finalizeProjectImport()" type="button" value="name amd import" /><br />
+		<input type="text"  [formControl]="nameForm" /> <button [disabled]="!isValidProjectName() || pathUsed.length == 0" (click)="finalizeProjectImport()">name amd import</button><br />
 	</div>
 	 <div *ngIf="nameForm.errors?.required">
-	    Name is required.
+		 Name is required.<br />
 	 </div>
 	 <div fxLayout="row">
-		 <span>Path selected: {{pathUsed}}</span><span *ngIf="!pathUsed"> currently none</span> 
+		 <span>Path selected: {{pathUsed}}</span><span *ngIf="!pathUsed"> currently none</span>  
 		 <button type="button" #projectImportButton (click)="selectProjectDirectory()" >select your project directory</button><br />
 	 </div>
 	 <div *ngIf="project">
